<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_color"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/tv_tickets"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/ed_ticket2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:drawablePadding="10dp"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </TableRow>


    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/tv_pay"
            android:textColor="@color/white" />

        <RadioGroup
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:drawablePadding="10dp"
                android:text="@string/rb_cash"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <RadioButton
                android:id="@+id/rb_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:text="@string/rb_credit"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </RadioGroup>
    </TableRow>

    <TableRow>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="CreditCard Number:"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/card_nbr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:drawablePadding="10dp"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="Expiery Date:"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/exp_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:drawablePadding="10dp"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </TableRow>

    <TableRow>

        <CheckBox
            android:id="@+id/cb_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:text="@string/cb_student"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="Coupon Code:"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/cp_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:drawablePadding="10dp"

            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="Coupon Code:"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Spinner
            android:id="@+id/school"
            android:layout_width="25dp"
            android:layout_height="wrap_content"


            android:drawablePadding="10dp"


            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </TableRow>

    <TableRow>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gold"
            android:onClick="book"
            android:text="@string/action_book" />

    </TableRow>
</TableLayout>